fix: ast-flex no-wrapping removed for builder elements

--- a/assets/css/unminified/frontend-rtl.css
+++ b/assets/css/unminified/frontend-rtl.css
@@ -2512,10 +2512,6 @@ body .entry-content .wp-block-latest-posts li {
   padding-left: 0;
 }
 
-.site-header-section.ast-flex {
-  flex-wrap: nowrap;
-}
-
 .site-header-section .ast-builder-menu {
   align-items: center;
 }
