--- a/sass/site/builder/_header.scss
+++ b/sass/site/builder/_header.scss
@@ -145,9 +145,6 @@
 			padding-right: 0;
 		}
 	}
-	&.ast-flex {
-		flex-wrap: nowrap;
-	}
 	.ast-builder-menu {
 		align-items: center;
 	}
